--- a/trunk/docs/todo.txt
+++ b/trunk/docs/todo.txt
@@ -312,4 +312,5 @@ X Anon sharing is throwing exception
 - Should limit comment scoring to one per user
 - Anonymous user is getting shared+1 and viewed+1...
 - Multiple __share comments per user are possible - shouldn't be
-! Timeouts of AJAX calls (claim username) do not generate errors 
+X Timeouts of AJAX calls (claim username) do not generate errors
+- Require that domains have a . in them to be valid (no intranet domains) 
